; ModuleID = '/home/carl/AnghaBench/git/extr_worktree.c_add_head_info.c'
source_filename = "/home/carl/AnghaBench/git/extr_worktree.c_add_head_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.worktree = type { i32, i32, i32 }

@.str = private unnamed_addr constant [5 x i8] c"HEAD\00", align 1
@REF_ISSYMREF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.worktree*)* @add_head_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_head_info(%struct.worktree* %0) #0 {
  %2 = alloca %struct.worktree*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store %struct.worktree* %0, %struct.worktree** %2, align 8
  %5 = load %struct.worktree*, %struct.worktree** %2, align 8
  %6 = call i32 @get_worktree_ref_store(%struct.worktree* %5)
  %7 = load %struct.worktree*, %struct.worktree** %2, align 8
  %8 = getelementptr inbounds %struct.worktree, %struct.worktree* %7, i32 0, i32 2
  %9 = call i8* @refs_resolve_ref_unsafe(i32 %6, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 0, i32* %8, i32* %3)
  store i8* %9, i8** %4, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %1
  br label %26

13:                                               ; preds = %1
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* @REF_ISSYMREF, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %13
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @xstrdup(i8* %19)
  %21 = load %struct.worktree*, %struct.worktree** %2, align 8
  %22 = getelementptr inbounds %struct.worktree, %struct.worktree* %21, i32 0, i32 1
  store i32 %20, i32* %22, align 4
  br label %26

23:                                               ; preds = %13
  %24 = load %struct.worktree*, %struct.worktree** %2, align 8
  %25 = getelementptr inbounds %struct.worktree, %struct.worktree* %24, i32 0, i32 0
  store i32 1, i32* %25, align 4
  br label %26

26:                                               ; preds = %12, %23, %18
  ret void
}

declare dso_local i8* @refs_resolve_ref_unsafe(i32, i8*, i32, i32*, i32*) #1

declare dso_local i32 @get_worktree_ref_store(%struct.worktree*) #1

declare dso_local i32 @xstrdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
